# pi-data-sharing

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  validate.py
demo/: README.md  run_demo.py
demo/sample_dataset/: info.json
demo/sample_dataset/meta/: custom_annotation.json  custom_metadata.csv  info.json
examples/: gcp_path_examples.py
examples/example_dataset/: info.json
examples/example_dataset/meta/: custom_annotation.json  custom_metadata.csv  info.json
lerobot_validator/: __init__.py  _episodes.py  annotation_validator.py  cli.py  gcp_path.py  lerobot_checks.py  metadata_validator.py  schemas.py  v3_checks.py  v3_metadata_checker.py  validator.py
tests/: __init__.py  test_annotation_validator.py  test_gcp_path.py  test_integration.py  test_is_eval_data_consistency.py  test_metadata_validator.py  test_v3_checks.py  test_v3_metadata_checker.py
